@@ -23,6 +23,7 @@ import java.net.InetAddress;
 import java.net.MalformedURLException;
 import java.net.UnknownHostException;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -59,7 +60,7 @@ import org.apache.tools.ant.Project;
  * <li>Bind Get, Call, Query result at Ant properties</li>
  * </ul>
  *
- * Examples: open server with reference and authorisation
+ * Examples: open server with reference and autorisation
  *
  * <pre>
  *
@@ -80,7 +81,7 @@ import org.apache.tools.ant.Project;
  * </p>
  * All JMXAccessorXXXTask support the attribute <em>if</em> and
  * <em>unless</em>. With <em>if</em> the task is only execute when property
- * exist and with <em>unless</em> when property not exists. <br><b>NOTE
+ * exist and with <em>unless</em> when property not exists. <br/><b>NOTE
  * </b>: These tasks require Ant 1.6 or later interface.
  *
  * @author Peter Rossbach
@@ -125,12 +126,11 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     // ------------------------------------------------------------- Properties
 
     /**
-     * Get the name used at remote MbeanServer.
-     *
-     * @return the name used at remote MbeanServer
+     * The name used at remote MbeanServer
      */
+
     public String getName() {
-        return this.name;
+        return (this.name);
     }
 
     public void setName(String objectName) {
@@ -196,10 +196,10 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * @return The login password for the <code>Manager</code> application.
+     * The login password for the <code>Manager</code> application.
      */
     public String getPassword() {
-        return this.password;
+        return (this.password);
     }
 
     public void setPassword(String password) {
@@ -207,10 +207,10 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * @return The login username for the <code>JMX</code> MBeanServer.
+     * The login username for the <code>JMX</code> MBeanServer.
      */
     public String getUsername() {
-        return this.username;
+        return (this.username);
     }
 
     public void setUsername(String username) {
@@ -218,10 +218,11 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * @return The URL of the <code>JMX JSR 160</code> MBeanServer to be used.
+     * The URL of the <code>JMX JSR 160</code> MBeanServer to be used.
      */
+
     public String getUrl() {
-        return this.url;
+        return (this.url);
     }
 
     public void setUrl(String url) {
@@ -229,10 +230,11 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * @return The Host of the <code>JMX JSR 160</code> MBeanServer to be used.
+     * The Host of the <code>JMX JSR 160</code> MBeanServer to be used.
      */
+
     public String getHost() {
-        return this.host;
+        return (this.host);
     }
 
     public void setHost(String host) {
@@ -240,10 +242,11 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * @return The Port of the <code>JMX JSR 160</code> MBeanServer to be used.
+     * The Port of the <code>JMX JSR 160</code> MBeanServer to be used.
      */
+
     public String getPort() {
-        return this.port;
+        return (this.port);
     }
 
     public void setPort(String port) {
@@ -341,18 +344,7 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * Create a new JMX Connection with auth when username and password is set.
-     *
-     * @param url URL to be used for the JMX connection
-     *        (if specified, it is a complete URL so host and port will not
-     *        be used)
-     * @param host Host name of the JMX server
-     * @param port Port number for the JMX server
-     * @param username User name for the connection
-     * @param password Credentials corresponding to the specified user
-     * @throws MalformedURLException Invalid URL specified
-     * @throws IOException Other connection error
-     * @return the JMX connection
+     * create a new JMX Connection with auth when username and password is set.
      */
     public static MBeanServerConnection createJMXConnection(String url,
             String host, String port, String username, String password)
@@ -404,18 +396,9 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     /**
      * Get Current Connection from <em>ref</em> parameter or create a new one!
      *
-     * @param project The Ant project
-     * @param url URL to be used for the JMX connection
-     *        (if specified, it is a complete URL so host and port will not
-     *        be used)
-     * @param host Host name of the JMX server
-     * @param port Port number for the JMX server
-     * @param username User name for the connection
-     * @param password Credentials corresponding to the specified user
-     * @param refId The Id of the reference to retrieve in the project
-     * @throws MalformedURLException Invalid URL specified
-     * @throws IOException Other connection error
-     * @return the JMX connection
+     * @return The server connection
+     * @throws MalformedURLException
+     * @throws IOException
      */
     @SuppressWarnings("null")
     public static MBeanServerConnection accessJMXConnection(Project project,
@@ -449,9 +432,9 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
     /**
      * get JMXConnection
      *
-     * @throws MalformedURLException Invalid URL specified
-     * @throws IOException Other connection error
-     * @return the JMX connection
+     * @return The connection
+     * @throws MalformedURLException
+     * @throws IOException
      */
     protected MBeanServerConnection getJMXConnection()
             throws MalformedURLException, IOException {
@@ -489,9 +472,8 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
      * input stream will be closed upon completion of this task, whether it was
      * executed successfully or not.
      *
-     * @param jmxServerConnection The JMX connection that should be used
-     * @return An error message string in some situations
-     * @exception Exception if an error occurs
+     * @exception Exception
+     *                if an error occurs
      */
     public String jmxExecute(MBeanServerConnection jmxServerConnection)
             throws Exception {
@@ -519,7 +501,7 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
         Object convertValue = value;
         if ("java.lang.Integer".equals(valueType) || "int".equals(valueType)) {
             try {
-                convertValue = Integer.valueOf(value);
+                convertValue = new Integer(value);
             } catch (NumberFormatException ex) {
                 if (isEcho())
                     handleErrorOutput("Unable to convert to integer:" + value);
@@ -527,7 +509,7 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
         } else if ("java.lang.Long".equals(valueType)
                 || "long".equals(valueType)) {
             try {
-                convertValue = Long.valueOf(value);
+                convertValue = new Long(value);
             } catch (NumberFormatException ex) {
                 if (isEcho())
                     handleErrorOutput("Unable to convert to long:" + value);
@@ -538,7 +520,7 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
         } else if ("java.lang.Float".equals(valueType)
                 || "float".equals(valueType)) {
             try {
-                convertValue = Float.valueOf(value);
+                convertValue = new Float(value);
             } catch (NumberFormatException ex) {
                 if (isEcho())
                     handleErrorOutput("Unable to convert to float:" + value);
@@ -546,7 +528,7 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
         } else if ("java.lang.Double".equals(valueType)
                 || "double".equals(valueType)) {
             try {
-                convertValue = Double.valueOf(value);
+                convertValue = new Double(value);
             } catch (NumberFormatException ex) {
                 if (isEcho())
                     handleErrorOutput("Unable to convert to double:" + value);
@@ -573,7 +555,7 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
 
     /**
      * @param name context of result
-     * @param result The result
+     * @param result
      */
     protected void echoResult(String name, Object result) {
         if (isEcho()) {
@@ -606,8 +588,8 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
      * option is that you delimit your result with a delimiter
      * (java.util.StringTokenizer is used).
      *
-     * @param propertyPrefix Prefix for the property
-     * @param result The result
+     * @param propertyPrefix
+     * @param result
      */
     protected void createProperty(String propertyPrefix, Object result) {
         if (propertyPrefix == null)
@@ -616,7 +598,8 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
             CompositeDataSupport data = (CompositeDataSupport) result;
             CompositeType compositeType = data.getCompositeType();
             Set<String> keys = compositeType.keySet();
-            for (String key : keys) {
+            for (Iterator<String> iter = keys.iterator(); iter.hasNext();) {
+                String key = iter.next();
                 Object value = data.get(key);
                 OpenType<?> type = compositeType.getType(key);
                 if (type instanceof SimpleType<?>) {
@@ -627,8 +610,10 @@ public class JMXAccessorTask extends BaseRedirectorHelperTask {
             }
         } else if (result instanceof TabularDataSupport) {
             TabularDataSupport data = (TabularDataSupport) result;
-            for (Object key : data.keySet()) {
-                for (Object key1 : ((List<?>) key)) {
+            for (Iterator<Object> iter = data.keySet().iterator(); iter.hasNext();) {
+                Object key = iter.next();
+                for (Iterator<?> iter1 = ((List<?>) key).iterator(); iter1.hasNext();) {
+                    Object key1 = iter1.next();
                     CompositeData valuedata = data.get(new Object[] { key1 });
                     Object value = valuedata.get("value");
                     OpenType<?> type = valuedata.getCompositeType().getType(
