@@ -26,8 +26,8 @@ import java.lang.management.ManagementFactory;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Hashtable;
+import java.util.Iterator;
 import java.util.List;
-import java.util.Map;
 
 import javax.management.DynamicMBean;
 import javax.management.MBeanAttributeInfo;
@@ -49,7 +49,7 @@ import org.apache.tomcat.util.modeler.modules.ModelerSource;
    - double check the interfaces
    - start removing the use of the experimental methods in tomcat, then remove
      the methods ( before 1.1 final )
-   - is the security enough to prevent Registry being used to avoid the permission
+   - is the security enough to prevent Registry beeing used to avoid the permission
     checks in the mbean server ?
 */
 
@@ -58,6 +58,10 @@ import org.apache.tomcat.util.modeler.modules.ModelerSource;
  *
  * This is the main entry point into modeler. It provides methods to create
  * and manipulate model mbeans and simplify their use.
+ *
+ * Starting with version 1.1, this is no longer a singleton and the static
+ * methods are strongly deprecated. In a container environment we can expect
+ * different applications to use different registries.
  *
  * This class is itself an mbean.
  *
@@ -85,7 +89,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      */
     private static Registry registry = null;
 
-    // Per registry fields
+    // Per registy fields
 
     /**
      * The <code>MBeanServer</code> instance that we will use to register
@@ -97,14 +101,14 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      * The set of ManagedBean instances for the beans this registry
      * knows about, keyed by name.
      */
-    private Map<String,ManagedBean> descriptors = new HashMap<>();
+    private HashMap<String,ManagedBean> descriptors = new HashMap<>();
 
     /** List of managed beans, keyed by class name
      */
-    private Map<String,ManagedBean> descriptorsByClass = new HashMap<>();
+    private HashMap<String,ManagedBean> descriptorsByClass = new HashMap<>();
 
     // map to avoid duplicated searching or loading descriptors
-    private Map<String,URL> searchedPaths = new HashMap<>();
+    private HashMap<String,URL> searchedPaths = new HashMap<>();
 
     private Object guard;
 
@@ -130,6 +134,9 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      * Factory method to create (if necessary) and return our
      * <code>Registry</code> instance.
      *
+     * Use this method to obtain a Registry - all other static methods
+     * are deprecated and shouldn't be used.
+     *
      * The current version uses a static - future versions could use
      * the thread class loader.
      *
@@ -137,7 +144,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      * loader will be used ( if setUseContextClassLoader is called ) or the
      * default registry is returned.
      * @param guard Prevent access to the registry by untrusted components
-     * @return the registry
+     *
      * @since 1.1
      */
     public static synchronized Registry getRegistry(Object key, Object guard) {
@@ -170,7 +177,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
                 registry.guard != guard ) {
             return null;
         }
-        return registry;
+        return (registry);
     }
 
     // -------------------- Generic methods  --------------------
@@ -187,8 +194,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         searchedPaths=new HashMap<>();
     }
 
-    /**
-     * Register a bean by creating a modeler mbean and adding it to the
+    /** Register a bean by creating a modeler mbean and adding it to the
      * MBeanServer.
      *
      * If metadata is not loaded, we'll look up and read a file named
@@ -214,7 +220,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      * @param type The type of the mbean, as declared in mbeans-descriptors. If
      * null, the name of the class will be used. This can be used as a hint or
      * by subclasses.
-     * @throws Exception if a registration error occurred
+     *
      * @since 1.1
      */
     @Override
@@ -224,11 +230,10 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         registerComponent(bean, new ObjectName(oname), type);
     }
 
-    /**
-     * Unregister a component. We'll first check if it is registered,
+    /** Unregister a component. We'll first check if it is registered,
      * and mask all errors. This is mostly a helper.
      *
-     * @param oname Name used for unregistration
+     * @param oname
      *
      * @since 1.1
      */
@@ -242,14 +247,13 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
     }
 
 
-    /**
-     * Invoke a operation on a list of mbeans. Can be used to implement
+    /** Invoke a operation on a list of mbeans. Can be used to implement
      * lifecycle operations.
      *
      * @param mbeans list of ObjectName on which we'll invoke the operations
      * @param operation  Name of the operation ( init, start, stop, etc)
      * @param failFirst  If false, exceptions will be ignored
-     * @throws Exception Error invoking operation
+     * @throws Exception
      * @since 1.1
      */
     @Override
@@ -258,7 +262,9 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         if( mbeans==null ) {
             return;
         }
-        for (ObjectName current : mbeans) {
+        Iterator<ObjectName> itr = mbeans.iterator();
+        while(itr.hasNext()) {
+            ObjectName current = itr.next();
             try {
                 if(current == null) {
                     continue;
@@ -278,13 +284,12 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
 
     // -------------------- ID registry --------------------
 
-    /**
-     * Return an int ID for faster access. Will be used for notifications
+    /** Return an int ID for faster access. Will be used for notifications
      * and for other operations we want to optimize.
      *
      * @param domain Namespace
-     * @param name Type of the notification
-     * @return An unique id for the domain:name combination
+     * @param name  Type of the notification
+     * @return  An unique id for the domain:name combination
      * @since 1.1
      */
     @Override
@@ -312,7 +317,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
             ids.put( domain, id);
         }
         int code=id[0]++;
-        domainTable.put( name, Integer.valueOf( code ));
+        domainTable.put( name, new Integer( code ));
         return code;
     }
 
@@ -341,7 +346,6 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      *
      * @param name Name of the managed bean to be returned. Since 1.1, both
      *   short names or the full name of the class can be used.
-     * @return the managed bean
      * @since 1.0
      */
     public ManagedBean findManagedBean(String name) {
@@ -354,11 +358,10 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
 
     // -------------------- Helpers  --------------------
 
-    /**
-     * Get the type of an attribute of the object, from the metadata.
+    /** Get the type of an attribute of the object, from the metadata.
      *
-     * @param oname The bean name
-     * @param attName The attribute name
+     * @param oname
+     * @param attName
      * @return null if metadata about the attribute is not found
      * @since 1.1
      */
@@ -383,11 +386,10 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         return null;
     }
 
-    /**
-     * Find the operation info for a method
+    /** Find the operation info for a method
      *
-     * @param oname The bean name
-     * @param opName The operation name
+     * @param oname
+     * @param opName
      * @return the operation info for the specified operation
      */
     public MBeanOperationInfo getMethodInfo( ObjectName oname, String opName )
@@ -408,52 +410,46 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         return null;
     }
 
-    /**
-     * Unregister a component. This is just a helper that
+    /** Unregister a component. This is just a helper that
      * avoids exceptions by checking if the mbean is already registered
      *
-     * @param oname The bean name
+     * @param oname
      */
     public void unregisterComponent( ObjectName oname ) {
         try {
-            if (oname != null && getMBeanServer().isRegistered(oname)) {
+            if( getMBeanServer().isRegistered(oname)) {
                 getMBeanServer().unregisterMBean(oname);
             }
-        } catch (Throwable t) {
-            log.error("Error unregistering mbean", t);
+        } catch( Throwable t ) {
+            log.error( "Error unregistering mbean ", t);
         }
     }
 
     /**
      * Factory method to create (if necessary) and return our
      * <code>MBeanServer</code> instance.
-     * @return the MBean server
+     *
      */
     public synchronized MBeanServer getMBeanServer() {
+        long t1=System.currentTimeMillis();
+
         if (server == null) {
-            long t1 = System.currentTimeMillis();
-            if (MBeanServerFactory.findMBeanServer(null).size() > 0) {
+            if( MBeanServerFactory.findMBeanServer(null).size() > 0 ) {
                 server = MBeanServerFactory.findMBeanServer(null).get(0);
-                if (log.isDebugEnabled()) {
-                    log.debug("Using existing MBeanServer " + (System.currentTimeMillis() - t1));
+                if( log.isDebugEnabled() ) {
+                    log.debug("Using existing MBeanServer " + (System.currentTimeMillis() - t1 ));
                 }
             } else {
                 server = ManagementFactory.getPlatformMBeanServer();
-                if (log.isDebugEnabled()) {
-                    log.debug("Creating MBeanServer" + (System.currentTimeMillis() - t1));
+                if( log.isDebugEnabled() ) {
+                    log.debug("Creating MBeanServer"+ (System.currentTimeMillis() - t1 ));
                 }
             }
         }
-        return server;
+        return (server);
     }
 
-    /**
-     * Find or load metadata.
-     * @param bean The bean
-     * @param beanClass The bean class
-     * @param type The registry type
-     * @return the managed bean
-     * @throws Exception An error occurred
+    /** Find or load metadata.
      */
     public ManagedBean findManagedBean(Object bean, Class<?> beanClass,
             String type) throws Exception {
@@ -500,8 +496,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
     }
 
 
-    /**
-     * EXPERIMENTAL Convert a string to object, based on type. Used by several
+    /** EXPERIMENTAL Convert a string to object, based on type. Used by several
      * components. We could provide some pluggability. It is here to keep
      * things consistent and avoid duplication in other tasks
      *
@@ -525,10 +520,10 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
             }
         } else if( "java.lang.Integer".equals( type ) ||
                 "int".equals( type )) {
-            objValue=Integer.valueOf( value );
+            objValue=new Integer( value );
         } else if( "java.lang.Long".equals( type ) ||
                 "long".equals( type )) {
-            objValue=Long.valueOf( value );
+            objValue=new Long( value );
         } else if( "java.lang.Boolean".equals( type ) ||
                 "boolean".equals( type )) {
             objValue=Boolean.valueOf( value );
@@ -536,14 +531,13 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         return objValue;
     }
 
-    /**
-     * Experimental. Load descriptors.
+    /** Experimental.
      *
-     * @param sourceType The source type
-     * @param source The bean
-     * @param param A type to load
+     * @param sourceType
+     * @param source
+     * @param param
      * @return List of descriptors
-     * @throws Exception Error loading descriptors
+     * @throws Exception
      */
     public List<ObjectName> load( String sourceType, Object source,
             String param) throws Exception {
@@ -592,13 +586,13 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
     }
 
 
-    /**
-     * Register a component
+    /** Register a component
+     * XXX make it private
      *
-     * @param bean The bean
-     * @param oname The object name
-     * @param type The registry type
-     * @throws Exception Error registering component
+     * @param bean
+     * @param oname
+     * @param type
+     * @throws Exception
      */
     public void registerComponent(Object bean, ObjectName oname, String type)
            throws Exception
@@ -636,12 +630,10 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         }
     }
 
-    /**
-     * Lookup the component descriptor in the package and
+    /** Lookup the component descriptor in the package and
      * in the parent packages.
      *
-     * @param packageName The package name
-     * @param classLoader The class loader
+     * @param packageName
      */
     public void loadDescriptors( String packageName, ClassLoader classLoader  ) {
         String res=packageName.replace( '.', '/');
@@ -670,9 +662,11 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         }
     }
 
-    /**
-     * Lookup the component descriptor in the package and
+    /** Lookup the component descriptor in the package and
      * in the parent packages.
+     *
+     * @param beanClass
+     * @param type
      */
     private void findDescriptor(Class<?> beanClass, String type) {
         if( type==null ) {
@@ -700,13 +694,14 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
             }
             loadDescriptors(pkg, classLoader);
         }
+        return;
     }
 
     private ModelerSource getModelerSource( String type )
             throws Exception
     {
         if( type==null ) type="MbeansDescriptorsDigesterSource";
-        if(!type.contains(".")) {
+        if( type.indexOf( ".") < 0 ) {
             type="org.apache.tomcat.util.modeler.modules." + type;
         }
 
