@@ -16,13 +16,9 @@
  */
 package org.apache.tomcat.util.net;
 
-import java.io.IOException;
 import java.net.ServerSocket;
 import java.net.Socket;
 import java.net.SocketException;
-import java.net.StandardSocketOptions;
-import java.nio.channels.AsynchronousServerSocketChannel;
-import java.nio.channels.AsynchronousSocketChannel;
 
 /**
  * Properties that can be set in the &lt;Connector&gt; element
@@ -30,6 +26,14 @@ import java.nio.channels.AsynchronousSocketChannel;
  * and are currently only working for the Nio connector
  */
 public class SocketProperties {
+    /**
+     * Enable/disable key cache, this bounded cache stores
+     * KeyAttachment objects to reduce GC
+     * Default is 500
+     * -1 is unlimited
+     * 0 is disabled
+     */
+    protected int keyCache = 500;
 
     /**
      * Enable/disable socket processor cache, this bounded cache stores
@@ -46,21 +50,15 @@ public class SocketProperties {
      * Default is 500
      * -1 is unlimited
      * 0 is disabled
-     * &gt;0 the max number of objects to keep in cache.
+     * >0 the max number of objects to keep in cache.
      */
     protected int eventCache = 500;
 
     /**
      * Enable/disable direct buffers for the network buffers
-     * Default value is disabled
+     * Default value is enabled
      */
     protected boolean directBuffer = false;
-
-    /**
-     * Enable/disable direct buffers for the network buffers for SSL
-     * Default value is disabled
-     */
-    protected boolean directSslBuffer = false;
 
     /**
      * Socket receive buffer size in bytes (SO_RCVBUF).
@@ -136,7 +134,7 @@ public class SocketProperties {
     /**
      * SO_TIMEOUT option. default is 20000.
      */
-    protected Integer soTimeout = Integer.valueOf(20000);
+    protected Integer soTimeout = new Integer(20000);
 
     /**
      * Performance preferences according to
@@ -214,34 +212,9 @@ public class SocketProperties {
             socket.setSoTimeout(soTimeout.intValue());
     }
 
-    public void setProperties(AsynchronousSocketChannel socket) throws IOException {
-        if (rxBufSize != null)
-            socket.setOption(StandardSocketOptions.SO_RCVBUF, rxBufSize);
-        if (txBufSize != null)
-            socket.setOption(StandardSocketOptions.SO_SNDBUF, txBufSize);
-        if (soKeepAlive != null)
-            socket.setOption(StandardSocketOptions.SO_KEEPALIVE, soKeepAlive);
-        if (soReuseAddress != null)
-            socket.setOption(StandardSocketOptions.SO_REUSEADDR, soReuseAddress);
-        if (soLingerOn != null && soLingerOn.booleanValue() && soLingerTime != null)
-            socket.setOption(StandardSocketOptions.SO_LINGER, soLingerTime);
-        if (tcpNoDelay != null)
-            socket.setOption(StandardSocketOptions.TCP_NODELAY, tcpNoDelay);
-    }
-
-    public void setProperties(AsynchronousServerSocketChannel socket) throws IOException {
-        if (rxBufSize != null)
-            socket.setOption(StandardSocketOptions.SO_RCVBUF, rxBufSize);
-        if (soReuseAddress != null)
-            socket.setOption(StandardSocketOptions.SO_REUSEADDR, soReuseAddress);
-    }
 
     public boolean getDirectBuffer() {
         return directBuffer;
-    }
-
-    public boolean getDirectSslBuffer() {
-        return directSslBuffer;
     }
 
     public boolean getOoBInline() {
@@ -302,6 +275,10 @@ public class SocketProperties {
 
     public int getEventCache() {
         return eventCache;
+    }
+
+    public int getKeyCache() {
+        return keyCache;
     }
 
     public int getAppReadBufSize() {
@@ -373,10 +350,6 @@ public class SocketProperties {
         this.directBuffer = directBuffer;
     }
 
-    public void setDirectSslBuffer(boolean directSslBuffer) {
-        this.directSslBuffer = directSslBuffer;
-    }
-
     public void setSoLingerOn(boolean soLingerOn) {
         this.soLingerOn = Boolean.valueOf(soLingerOn);
     }
@@ -391,6 +364,10 @@ public class SocketProperties {
 
     public void setEventCache(int eventCache) {
         this.eventCache = eventCache;
+    }
+
+    public void setKeyCache(int keyCache) {
+        this.keyCache = keyCache;
     }
 
     public void setAppReadBufSize(int appReadBufSize) {
