@@ -31,8 +31,6 @@ import javax.naming.spi.ObjectFactory;
 
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
-import org.apache.tomcat.jdbc.pool.ClassLoaderUtil;
-
 /**
  * Simple way of configuring generic resources by using reflection.
  * Example usage:
@@ -59,12 +57,7 @@ public class GenericNamingResourcesFactory implements ObjectFactory {
         Enumeration<RefAddr> refs = ref.getAll();
 
         String type = ref.getClassName();
-        Object o =
-            ClassLoaderUtil.loadClass(
-                type,
-                GenericNamingResourcesFactory.class.getClassLoader(),
-                Thread.currentThread().getContextClassLoader())
-            .newInstance();
+        Object o = Class.forName(type).newInstance();
 
         while (refs.hasMoreElements()) {
             RefAddr addr = refs.nextElement();
@@ -120,7 +113,7 @@ public class GenericNamingResourcesFactory implements ObjectFactory {
                     if ("java.lang.Integer".equals(paramType.getName())
                             || "int".equals(paramType.getName())) {
                         try {
-                            params[0] = Integer.valueOf(value);
+                            params[0] = new Integer(value);
                         } catch (NumberFormatException ex) {
                             ok = false;
                         }
@@ -128,7 +121,7 @@ public class GenericNamingResourcesFactory implements ObjectFactory {
                     }else if ("java.lang.Long".equals(paramType.getName())
                                 || "long".equals(paramType.getName())) {
                             try {
-                                params[0] = Long.valueOf(value);
+                                params[0] = new Long(value);
                             } catch (NumberFormatException ex) {
                                 ok = false;
                             }
