@@ -59,6 +59,7 @@ public class TestBeanELResolver {
         Assert.assertTrue("Wrong exception type",
                 e instanceof PropertyNotFoundException);
         String type = Bean.class.getName();
+        @SuppressWarnings("null") // Assert above prevents msg being null
         String msg = e.getMessage();
         Assert.assertTrue("No reference to type [" + type +
                 "] where property cannot be found in [" + msg + "]",
@@ -331,7 +332,7 @@ public class TestBeanELResolver {
         BeanELResolver resolver = new BeanELResolver();
         ELContext context = new StandardELContext(ELManager.getExpressionFactory());
 
-        resolver.isReadOnly(context, new TesterBean(BEAN_NAME), Integer.valueOf(0));
+        resolver.isReadOnly(context, new TesterBean(BEAN_NAME), new Integer(0));
     }
 
     /**
